--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,23 @@ services:
       - redis
     networks:
       - taranet
+  db:
+    image: ${POSTGRES_IMAGE}
+    container_name: tara_db
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
+    env_file:
+      - .env
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - taranet
 
   celery_worker:
     image: ${DOCKER_IMAGE}:${IMAGE_TAG}
@@ -61,6 +78,7 @@ services:
 
 volumes:
   backend_logs:
+  db_data:
 
 networks:
   taranet:
