--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
     command: celery -A Tara worker --loglevel=info --pool=solo
     depends_on:
       - redis
+    restart: always
     environment:
       - PYTHONPATH=/app
       - DJANGO_SETTINGS_MODULE=Tara.settings.default               # ✅ Important
@@ -70,6 +71,7 @@ services:
     command: celery -A Tara beat --loglevel=info
     depends_on:
       - redis
+    restart: always
     environment:
       - PYTHONPATH=/app
       - DJANGO_SETTINGS_MODULE=Tara.settings.default               # ✅ Important
