--- a/buildspec.yml
+++ b/buildspec.yml
@@ -34,8 +34,8 @@ phases:
       - echo "POSTGRES_IMAGE=$POSTGRES_IMAGE"
       - echo "IMAGE_TAG=$IMAGE_TAG"
       - echo "REDIS_IMAGE=$REDIS_IMAGE"
-      - docker pull $REDIS_IMAGE || true
-      - docker pull $POSTGRES_IMAGE
+      # - docker pull $REDIS_IMAGE || true
+      # - docker pull $POSTGRES_IMAGE
 
   build:
     commands:
