--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/tara_green
-  - source: nginx/http.conf
+  - source: nginx/http_template.conf
     destination: /tmp
 
 hooks:
@@ -28,7 +28,9 @@ hooks:
     - location: scripts/migrate_and_static.sh
       timeout: 600
       runas: ubuntu
-
+    - location: scripts/switch_nginx.sh
+      timeout: 300
+      runas: root
   ApplicationStop:
     - location: scripts/applicationstop.sh
       timeout: 180
