--- a/nginx/http_template.conf
+++ b/nginx/http_template.conf
@@ -1,5 +1,5 @@
 upstream backend {
-    server 127.0.0.1:8002;  # Docker container exposed on host
+    server 127.0.0.1:__PORT__;  # Docker container exposed on host
     keepalive 32;
 }
 
