--- a/nginx/http_template.conf
+++ b/nginx/http_template.conf
@@ -5,7 +5,7 @@ upstream backend {
 
 server {
     listen 80;
-    server_name dev-backend.tarafirst.com;
+    server_name 44.204.52.175;
 
     location / {
         proxy_pass http://backend;
