--- a/appspec.yml
+++ b/appspec.yml
@@ -12,9 +12,9 @@ hooks:
     - location: scripts/beforeinstall.sh
       timeout: 300
       runas: root
-    - location: scripts/create_docker_network.sh   # ✅ create tara
-      timeout: 60
-      runas: root
+    # - location: scripts/create_docker_network.sh   # ✅ create tara
+    #   timeout: 60
+    #   runas: root
     - location: scripts/shared_service.sh       # 👈 Starts Redis/Postgres once
       timeout: 300
       runas: root
